* Add the code for search function. * Add the bootstrap cdn inside index.html to beautify the search area.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,15 @@
 <div> {{ (af.auth | async)?.uid }} </div>
 <button (click)="login()">Login</button>
+
+<div align="center">
+    <h1>Stackbot</h1>
+    <div class="col-lg-4 col-lg-offset-4">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search for..." id="search-field">
+            <span class="input-group-btn">
+        <button class="btn btn-secondary" type="button" onclick="submit();" id="search-button">Search</button>
+      </span>
+        </div>
+    </div>
+</div>
+<br>
