--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,15 +1,4 @@
-<div> {{ (af.auth | async)?.uid }} </div>
-<button (click)="login()">Login</button>
-
 <div align="center">
-    <h1>Stackbot</h1>
-    <div class="col-lg-4 col-lg-offset-4">
-        <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for..." id="search-field">
-            <span class="input-group-btn">
-        <button class="btn btn-secondary" type="button" onclick="submit();" id="search-button">Search</button>
-      </span>
-        </div>
-    </div>
+    <br> {{ (af.auth | async)?.uid }} <br>
+    <button (click)="login()">Login</button>
 </div>
-<br>
