--- a/frontend/src/app/search.component.html
+++ b/frontend/src/app/search.component.html
@@ -2,9 +2,9 @@
     <h1>Stackbot</h1>
     <div class="col-lg-4 col-lg-offset-4">
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for..." id="search-field">
+            <input type="text" class="form-control" placeholder="Search for..." #searchField>
             <span class="input-group-btn">
-        <button class="btn btn-secondary" type="button" onclick="submit();" id="search-button">Search</button>
+        <button class="btn btn-secondary" type="button" (click)="submit(searchField.value)" id="search-button">Search</button>
       </span>
         </div>
     </div>
