PROD-230: Create basic bootstrap table to hold the 'query' and 'timestamp' data.

--- a/frontend/src/app/report.component.html
+++ b/frontend/src/app/report.component.html
@@ -1,1 +1,9 @@
-THIS IS STUFF
+<br>
+<table class="table-bordered" width="400" align="center">
+    <thead>
+      <tr>
+        <th>Query</th>
+        <th>Timestamp</th>
+      </tr>
+    </thead>
+</table>
