Remove the report when a user logs out.
* Assign null to data when logout button is pressed.

--- a/frontend/src/app/report.component.html
+++ b/frontend/src/app/report.component.html
@@ -1,5 +1,5 @@
 <br>
-<table class="table-bordered" width="400" align="center">
+<table *ngIf="data" class="table-bordered" width="400" align="center">
     <thead>
         <tr>
             <th>Query</th>
