--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,3 @@
 <search></search>
 <report></report>
-<div align="center">
-    <br> {{ (af.auth | async)?.uid }} <br>
-    <button (click)="login()">Login</button>
-    <button (click)="logout()">Logout</button>
-</div>
+<auth-button></auth-button>
