PROD-226: Refactoring to use the angular-jwt package for sending Http requests with JWT token.
- Adds a new custom AuthService that abstracts stuff from FirebaseAuth.
- Creates a new Observable for the jwt token, so that we know when to send requests on page load.

--- a/default/src/app/auth.button.component.html
+++ b/default/src/app/auth.button.component.html
@@ -1,5 +1,5 @@
 <div align="center">
     <br>
-    <button *ngIf="uid == null" (click)="login()">Login</button>
-    <button *ngIf="uid" (click)="logout()">Logout</button>
+    <button *ngIf="!loggedIn" (click)="login()">Login</button>
+    <button *ngIf="loggedIn" (click)="logout()">Logout</button>
 </div>
