PROD-238: Display the timestamp column in reports in 'hh:mm AM/PM mm/dd' format.
See: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date
for details on the Date object and it's methods.

PROD-238:

* Remove parseInt() from the methods to get hour, minute and month since
  those methods return a number.
* Fix the bug where we check if the minute is a single digit.

--- a/default/src/app/report.component.html
+++ b/default/src/app/report.component.html
@@ -7,7 +7,7 @@
             </tr>
             <tr *ngFor="let d of data">
                 <td>{{d.query}}</td>
-                <td>{{d.timestamp}}</td>
+                <td>{{ formatDate(d.timestamp) }}</td>
             </tr>
         </thead>
     </table>
