PROD-246: Cleanup the UI and the templates a little bit.

--- a/default/src/app/app.component.html
+++ b/default/src/app/app.component.html
@@ -1,3 +1,9 @@
-<search></search>
-<report></report>
-<auth-button></auth-button>
+
+<div align="center">
+    <h1>Stackbot</h1>
+    <div class="col-lg-4 col-lg-offset-4">
+        <search></search>
+        <auth-button></auth-button>
+        <report></report>
+    </div>
+</div>
