--- a/default/src/app/report.component.html
+++ b/default/src/app/report.component.html
@@ -1,13 +1,14 @@
-
-<table *ngIf="data" class="table-bordered" width="400" align="center">
-    <thead>
-        <tr>
-            <th>Query</th>
-            <th>Timestamp</th>
-        </tr>
-        <tr *ngFor="let d of data">
-            <td>{{d.query}}</td>
-            <td>{{d.timestamp}}</td>
-        </tr>
-    </thead>
-</table>
+<div>
+    <table *ngIf="data" class="table table-striped">
+        <thead>
+            <tr>
+                <th>Query</th>
+                <th>Timestamp</th>
+            </tr>
+            <tr *ngFor="let d of data">
+                <td>{{d.query}}</td>
+                <td>{{d.timestamp}}</td>
+            </tr>
+        </thead>
+    </table>
+</div>
