--- a/default/src/app/search.component.html
+++ b/default/src/app/search.component.html
@@ -1,6 +1,7 @@
 
 <div class="input-group">
-    <input type="text" class="form-control" (keypress)="onPressEnter($event, searchField.value)" placeholder="Search for..." #searchField>
+    <input *ngIf="preSearchText" type="text" class="form-control" (keypress)="onPressEnter($event, searchField.value)" value={{preSearchText}} #searchField>
+    <input *ngIf="preSearchText === null" type="text" class="form-control" (keypress)="onPressEnter($event, searchField.value)" placeholder="Search for..." #searchField>
     <span class="input-group-btn">
         <button class="btn btn-secondary" type="button" (click)="submit(searchField.value)" id="search-button">Search</button>
     </span>
