PROD-256: Focus the cursor on the search input when it's loaded using a new focusMe directive.

--- a/default/src/app/search/search.component.html
+++ b/default/src/app/search/search.component.html
@@ -1,6 +1,6 @@
 
 <div class="input-group">
-    <input type="text" class="form-control" (keypress)="onPressEnter($event, searchField.value)" value={{preSearchText}} #searchField>
+    <input focusMe type="text" class="form-control" (keypress)="onPressEnter($event, searchField.value)" value={{preSearchText}} #searchField>
     <span class="input-group-btn">
         <button class="btn btn-secondary" type="button" (click)="submit(searchField.value)" id="search-button">Search</button>
     </span>
