Add router to the stackbot so that we can navigate more efficiently.
* app.routing.ts -> holds the routing config and path data.
* integrations.component.ts, integrations.component.html -> new component to store the integrations
* Add code to implement routing in app.module.ts

--- a/default/src/app/app.component.html
+++ b/default/src/app/app.component.html
@@ -4,7 +4,11 @@
     <div class="col-lg-4 col-lg-offset-4">
         <search></search>
         <auth-button></auth-button>
-        <auth-integrations></auth-integrations>
-        <report></report>
+
+        <a [routerLink]="['/report']" routerLinkActive="active">Report</a><br>
+        <a [routerLink]="['/integrations']" routerLinkActive="active">Integrations</a><br>
+
+        <router-outlet></router-outlet>
+
     </div>
 </div>
