--- a/default/src/app/app.component.html
+++ b/default/src/app/app.component.html
@@ -4,6 +4,7 @@
     <div class="col-lg-4 col-lg-offset-4">
         <search></search>
         <auth-button></auth-button>
+        <auth-integrations></auth-integrations>
         <report></report>
     </div>
 </div>
