--- a/default/src/app/report/report.component.html
+++ b/default/src/app/report/report.component.html
@@ -1,14 +1,35 @@
 <div>
-    <table *ngIf="data" class="table table-striped">
+    <table *ngIf="data" class="table">
         <thead>
-            <tr>
-                <th>Query</th>
-                <th>Timestamp</th>
-            </tr>
-            <tr *ngFor="let d of data">
-                <td>{{d.query}}</td>
-                <td>{{ formatDate(d.timestamp) }}</td>
-            </tr>
         </thead>
+        <tr [ngSwitch]="d">
+            <p *ngSwitchCase="'init'">increment to start</p>
+            <p *ngSwitchCase="0">0, increment again</p>
+        </tr>
+        <tr *ngFor="let item of data" class="{{item.type}}">
+            <td [ngSwitch]="item.type">
+                <span *ngSwitchCase="'query'">
+                    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                    {{item.query}}
+                </span>
+                <span *ngSwitchCase="'day'" >{{item.name}}</span>
+                <span *ngSwitchDefault>{{item.type}}</span>
+            </td>
+            <td [ngSwitch]="item.type">
+                <span *ngSwitchCase="'query'">
+                    <span class="time-of-day">
+                        {{ formatTime(item.timestamp) }}
+                    </span>
+                </span>
+                <span *ngSwitchCase="'day'" >
+                    <span class="day-of-month">
+                        {{formatDayOfMonth(item.timestamp)}}
+                    </span>
+                    <span class="month">
+                       {{formatMonth(item.timestamp)}}
+                    </span>
+                </span>
+            </td>
+        </tr>
     </table>
 </div>
