--- a/default/src/app/app.component.html
+++ b/default/src/app/app.component.html
@@ -1,10 +1,12 @@
 
-<div align="center">
-    <h1>Stackbot</h1>
-    <div class="col-lg-4 col-lg-offset-4">
-        <search></search>
-        <auth-button></auth-button>
-        <auth-integrations></auth-integrations>
-        <report></report>
+<div class="container">
+    <div class="row">
+        <h1>Stackbot</h1>
+        <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-5 col-lg-offset-3">
+            <search></search>
+            <auth-button></auth-button>
+            <auth-integrations></auth-integrations>
+            <report></report>
+        </div>
     </div>
 </div>
