--- a/default/src/app/report/report.component.css
+++ b/default/src/app/report/report.component.css
@@ -1,5 +1,10 @@
+:host div {
+    padding-top: 20px;
+}
+
+
 .day {
-    background-color: #358fa5;
+    background-color: #2d8196;
     color: #fff;
     /*font-weight: bold;*/
 
@@ -11,4 +16,9 @@
 }
 .query span {
     /*margin-left: 10px;*/
+}
+
+:host table {
+    background-color: #fff;
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12),0 2px 4px -1px rgba(0,0,0,.2);
 }
