PROD-268: Add stylings to the auth-button component.

--- a/default/src/app/auth/auth-button.component.css
+++ b/default/src/app/auth/auth-button.component.css
@@ -6,4 +6,11 @@ button.upper-right {
 
 button {
     margin: 20px;
+    background-color: #da4649;
+    color: #ffffff;
+}
+
+button:hover {
+    background-color: #da4649;
+    color: #ffffff;
 }
