--- a/default/src/app/auth/auth-button.component.html
+++ b/default/src/app/auth/auth-button.component.html
@@ -1,4 +1,4 @@
 <div align="center">
-    <button class="btn btn-success btn-lg" *ngIf="!loggedIn" (click)="login()" type="submit">Login with Github</button>
+    <button class="btn btn-lg" *ngIf="!loggedIn" (click)="login()" type="submit">Login with Github</button>
     <button class="upper-right btn btn-xs" *ngIf="loggedIn" (click)="logout()" type="submit">Logout</button>
 </div>
