PROD-266: Add code to display tags in the report.
* The tags are displayed after the query and are space-separated and
  highlighted with blue colour.

--- a/default/src/app/report/report.component.html
+++ b/default/src/app/report/report.component.html
@@ -11,6 +11,7 @@
                 <span *ngSwitchCase="'query'">
                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                     {{item.query}}
+                    <span *ngFor="let tag of item.tags" class="tags">#{{tag}}</span>
                 </span>
                 <span *ngSwitchCase="'day'" >{{item.name}}</span>
                 <span *ngSwitchDefault>{{item.type}}</span>
