Fix me later! PROD-239: Add code to fetch the cursor in the frontend if it exists.

--- a/default/src/app/report/report.component.html
+++ b/default/src/app/report/report.component.html
@@ -32,5 +32,6 @@
                 </span>
             </td>
         </tr>
+        <tr *ngIf="cursor"><button>Show more</button></tr>
     </table>
 </div>
