Fix me later! PROD-239: Add code to display the data on pressing the 'Show more' button.
* Create a button which shows more data on pressing it.
* This button goes away once we hit the end of the data.

--- a/default/src/app/report/report.component.html
+++ b/default/src/app/report/report.component.html
@@ -32,6 +32,8 @@
                 </span>
             </td>
         </tr>
-        <tr *ngIf="cursor"><button>Show more</button></tr>
     </table>
+    <div id="show-more">
+        <button class="btn btn-secondary" (click)="getMoreData(cursor)" *ngIf="cursor">Show more</button>
+    </div>
 </div>
