--- a/default/src/app/report/report.component.html
+++ b/default/src/app/report/report.component.html
@@ -1,5 +1,5 @@
-<div>
-    <table *ngIf="data" class="table">
+<div *ngIf="data.length != 0">
+    <table class="table">
         <thead>
         </thead>
         <tr [ngSwitch]="d">
