--- a/default/src/app/report/report.component.html
+++ b/default/src/app/report/report.component.html
@@ -1,5 +1,5 @@
-<div>
-    <table *ngIf="data" class="table">
+<div *ngIf="data.length != 0">
+    <table class="table">
         <thead>
         </thead>
         <tr [ngSwitch]="d">
@@ -33,4 +33,7 @@
             </td>
         </tr>
     </table>
+    <div id="show-more">
+        <button class="btn btn-secondary" (click)="getMoreData(cursor)" *ngIf="cursor">Show more</button>
+    </div>
 </div>
