--- a/default/src/app/report/report.component.html
+++ b/default/src/app/report/report.component.html
@@ -11,10 +11,8 @@
                 <span *ngSwitchCase="'query'">
                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                     <span *ngIf="!item.isEdit" id="query" (keydown.enter)="query.value = editedValue">{{item.query}}</span>
-                    <span *ngFor="let tag of item.tags" class="tags">
-                        <span *ngIf="!item.isEdit">#{{tag}}</span>
-                        <span *ngIf="item.isEdit"><input type="text" [value]="tag" (keydown.enter)="updateTag(editTag.value)" #editTag></span>
-                    </span>
+                    <span *ngIf="!item.isEdit"><span *ngFor="let tag of item.tags" class="tags">#{{tag}}</span></span>
+                    <span *ngIf="item.isEdit"><input type="text" [value]="item.tags" (keydown.enter)="item.tags = editTag.value.split(','); item.isEdit=false" #editTag></span>
                     <span *ngIf="item.isEdit"><input type="text" [value]="item.query" (keydown.enter)="item.query = editField.value; item.isEdit = false; updateValue(item.query, item.tags)" #editField /></span>
                 </span>
                 <span *ngSwitchCase="'day'" >{{item.name}}</span>
