PROD-272: Allow anonymous users to make the request to the backend and get the redirect response.
* An anonymous user on query to the database will get a redirect link to google from the backend.
* The queries by such user won't be recorded in the datastore.
* Use a regular HTTP request to accomplish this.

--- a/default/src/app/search/search.component.html
+++ b/default/src/app/search/search.component.html
@@ -2,9 +2,9 @@
 <div class="input-group inner-addon left-addon">
     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
     <input autofocus type="text" class="form-control" (keypress)="onPressEnter($event, searchField.value)"
-           value={{preSearchText}} #searchField [disabled]=disabled >
+           value={{preSearchText}} #searchField>
     <span class="input-group-btn">
-        <button class="btn" type="button" (click)="submit(searchField.value)" id="search-button" [disabled]=disabled>Search</button>
+        <button class="btn" type="button" (click)="submit(searchField.value)" id="search-button">Search</button>
     </span>
 </div>
 
