fix me later! PROD-278: Write the code to show the data in the frontend.

--- a/default/src/app/search/search.component.html
+++ b/default/src/app/search/search.component.html
@@ -8,4 +8,13 @@
     </span>
 </div>
 
+<div>
+    <table>
+        <tr *ngFor="let link of res">
+            <td>link.name</td>
+            <td>link.url</td>
+        </tr>
+    </table>
+</div>
+
 
