fix me later! PROD-278: Got the results to be displayed in the front end.

--- a/default/src/app/search/search.component.html
+++ b/default/src/app/search/search.component.html
@@ -11,8 +11,8 @@
 <div>
     <table>
         <tr *ngFor="let link of res">
-            <td>link.name</td>
-            <td>link.url</td>
+            <td>{{link.name}}</td>
+            <td>{{link.url}}</td>
         </tr>
     </table>
 </div>
