fix me later! PROD-278: Create a service to handle the hiding of the report on fetching the queries.

--- a/default/src/app/report/report.component.html
+++ b/default/src/app/report/report.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="data.length != 0">
+<div *ngIf="data.length != 0 && showReport === true">
     <table class="table">
         <thead>
         </thead>
