fix me later! PROD-278: Add feature to hide the reports when making a search.
* Return the redirect back as a response.

--- a/default/src/app/report/report.component.html
+++ b/default/src/app/report/report.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="data.length != 0 && showReport === true">
+<div *ngIf="data.length != 0 && toggleReport.showReport">
     <table class="table">
         <thead>
         </thead>
