--- a/default/src/app/search/search.component.html
+++ b/default/src/app/search/search.component.html
@@ -6,6 +6,9 @@
     <span class="input-group-btn">
         <button class="btn" type="button" (click)="submit(searchField.value)" id="search-button">Search</button>
     </span>
+    <span class="input-group-btn">
+        <button class="btn" type="button" (click)="_redirect(redirect)" id="search-button">Search</button>
+    </span>
 </div>
 <br>
 <div>
