PROD-278: Add a 'google instead' button if the user decides to google the search instead of using ours.

--- a/default/src/app/search/search.component.html
+++ b/default/src/app/search/search.component.html
@@ -6,8 +6,8 @@
     <span class="input-group-btn">
         <button class="btn" type="button" (click)="submit(searchField.value)" id="search-button">Search</button>
     </span>
-    <span class="input-group-btn">
-        <button class="btn" type="button" (click)="_redirect(redirect)" id="search-button">Search</button>
+    <span class="input-group-btn" *ngIf="googleRedirectLink">
+        <button class="btn" type="button" (click)="_redirect(googleRedirectLink)" id="search-button">Google Instead?</button>
     </span>
 </div>
 <br>
