fix me later! PROD-278: Add new result component to hold the results data. Not able to display the results though.

--- a/default/src/app/app.component.html
+++ b/default/src/app/app.component.html
@@ -12,6 +12,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-5 col-lg-offset-3">
+            <result></result>
             <auth-integrations></auth-integrations>
             <report></report>
         </div>
