--- a/default/src/app/result/result.component.html
+++ b/default/src/app/result/result.component.html
@@ -1,5 +1,6 @@
+<br>
 <div *ngIf="resultService.data.length != 0">
-    <span *ngFor="let link of results">
+    <span *ngFor="let link of resultService.data">
         <a href="{{link.url}}">{{link.name}}</a><br>
         {{link.displayUrl}} <br>
         {{link.snippet}} <br><br>
