fix me later! PROD-278: Separate the 'search' and 'google instead?' button by 2px.

--- a/default/src/app/search/search.component.css
+++ b/default/src/app/search/search.component.css
@@ -40,4 +40,6 @@ button:hover {
 .left-addon input  { padding-left:  30px; }
 .right-addon input { padding-right: 30px; }
 
-
+#google-search-button {
+    margin-left: 2px;
+}
